# scraperninja

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
scraperninja/: constants.py
scraperninja/model/: analysis_params.py  money.py  proxy_settings.py
scraperninja/model/api/: flight_search_request.py  flight_search_response.py
scraperninja/model/domain/: flight.py
scraperninja/scraper/: american_airline_flight_scraper.py  network_spy.py  proxy_manager.py
scraperninja/scraper/flight_search/: __init__.py  base_flight_search_response_api.py  camou_fox_browser_flight_search_api.py  chrome_browser_flight_search_api.py  flight_search_api.py
tests/: test_proxy_manager.py
