[project]
name = "scraperninja"
version = "0.1.0"
description = "Scrap AA website because we love american airlines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "scrapling[all]>=0.3.7",
    "selenium-driverless>=1.9.4",
    "tenacity>=9.1.2",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.ruff]
lint.select = ["E", "F", "W", "I"] 


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
